--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "dependencies": {
     "next": "15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "sass": "^1.87.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "sass": "^1.87.0",
     "tailwindcss": "^4"
   }
 }
